src/index.css
@font-face {
  font-family: "SN Pro";
  src: url("./assets/fonts/SNPro-400.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "SN Pro";
  src: url("./assets/fonts/SNPro-500.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "SN Pro";
  src: url("./assets/fonts/SNPro-600.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

:root {
  /* Colors */
  --color-accent: #000000;
  --color-background: #fdfdfc;
  --color-heading: #21201c;
  --color-body: #63635e;
  --color-border: #e3e2e0;
  --color-gray-light: #f1f0ef;

  /* Font Sizes */
  --font-heading: clamp(1.1rem, 1rem + 0.75vw, 1.3rem);
  --font-body: clamp(0.9rem, 0.85rem + 0.25vw, 1rem);
  --font-caption: clamp(0.8rem, 0.75rem + 0.25vw, 0.9375rem);

  /* Font Weights */
  --weight-semi: 500;
  --weight-bold: 600;

  --border-radius: 8px;
  --border-radius-full: 999px;

  /* Spacing Scale */
  --spacing-xs: 0.25rem;
  --spacing-sm: 0.5rem;
  --spacing-ms: 0.75rem;
  --spacing-md: 1rem;
  --spacing-lg: 1.5rem;
  --spacing-xl: 2rem;
  --spacing-xxl: 3rem;
  --spacing-xxxl: 4.5rem;

  /* Transitions */
  --transition-transform: transform 0.15s ease;
  --transition-opacity: opacity 0.15s ease;
  --transition-fill: fill 0.15s ease;
  --transition-color-border: border-color 0.15s ease, color 0.15s ease;
  --transition-color: color 0.15s ease;
  --transition-bg: background-color 0.15s ease;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-accent: #ffffff;
    --color-background: #111110;
    --color-heading: #edece9;
    --color-body: #adadad;
    --color-border: #2b2a28;
    --color-gray-light: #222221;
  }
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scrollbar-gutter: stable;
}

body {
  font-family: "SN Pro", sans-serif;
  background-color: var(--color-background);
  line-height: 1.6;
}

.app {
  min-height: 100dvh;
  max-width: 700px;
  margin: 0 auto;
  display: grid;
  grid-template-rows: auto 1fr auto;
  gap: var(--spacing-xxl);
  padding: var(--spacing-lg);
}

main {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-xl);
}

footer {
  display: flex;
  border-top: 1px solid var(--color-border);
  padding-top: var(--spacing-md);
}

h2 {
  color: var(--color-heading);
  font-size: var(--font-heading);
  font-weight: var(--weight-semi);
}

p,
b {
  font-size: var(--font-body);
  color: var(--color-body);
  max-width: 65ch;
}

small {
  font-size: var(--font-caption);
  color: var(--color-body);
  max-width: 65ch;
}

a {
  text-decoration: none;
  color: var(--color-body);
}

ul {
  list-style: none;
}

section {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-md);
}

.hstack {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.vstack {
  display: flex;
  flex-direction: column;
}

.gap-sm {
  gap: var(--spacing-sm);
}

.gap-md {
  gap: var(--spacing-md);
}

.gap-lg {
  gap: var(--spacing-lg);
}

.justify-between {
  justify-content: space-between;
}

button,
.button {
  font-family: inherit;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: var(--spacing-xs);
  border: 1px solid transparent;
  background-color: var(--color-accent);
  color: var(--color-background);
  padding: var(--spacing-xs) var(--spacing-sm);
  border-radius: var(--border-radius);
  font-size: var(--font-caption);
  font-weight: var(--weight-semi);
  width: fit-content;

  &.outline {
    background-color: transparent;
    color: var(--color-body);
    border-color: var(--color-body);
  }

  &.filter {
    border-color: var(--color-border);
    background-color: transparent;
    color: var(--color-body);
    padding: var(--spacing-xs) calc(var(--spacing-md) * 0.9);
    border-radius: var(--border-radius-full);
    transition:
      var(--transition-color-border), var(--transition-bg),
      var(--transition-color);

    &:not(.active):hover {
      border-color: var(--color-accent);
      color: var(--color-accent);
    }

    &.active {
      border-color: var(--color-accent);
      background-color: var(--color-accent);
      color: var(--color-background);
    }
  }
}

.icon,
.icon-small {
  fill: var(--color-body);
  flex-shrink: 0;
}

.icon {
  width: 20px;
  height: 20px;
}
.icon-small {
  width: 16px;
  height: 16px;
}

.profile-image {
  width: 80px;
  height: 80px;
  border-radius: var(--border-radius-full);
}

@media (max-width: 480px) {
  .profile-image {
    width: 72px;
    height: 72px;
  }
}

@media (hover: hover) {
  button,
  .hover-accent,
  .hover-fade,
  .hover-invert,
  .hover-button-fill {
    &:hover {
      cursor: pointer;
    }
  }

  .hover-fade {
    transition: var(--transition-opacity);

    &:hover {
      opacity: 0.8;
    }
  }

  .hover-invert {
    transition: var(--transition-color-border), var(--transition-bg);

    .icon,
    .icon-small {
      transition: var(--transition-fill);
    }

    &:hover {
      background-color: transparent;
      color: var(--color-accent);
      border-color: var(--color-accent);
    }

    &:hover .icon,
    &:hover .icon-small {
      fill: var(--color-accent);
    }
  }

  .hover-accent {
    transition: var(--transition-color-border);

    .icon,
    .icon-small {
      transition: var(--transition-fill);
    }

    &:hover {
      color: var(--color-accent);
      border-color: var(--color-accent);
    }

    &:hover .icon,
    &:hover .icon-small {
      fill: var(--color-accent);
    }
  }
}

@media (hover: none) {
  * {
    -webkit-tap-highlight-color: transparent;
  }
}

